--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,4 +1,5 @@
 @import 'element-ui/*'
+@require './theme/index.styl';
 
 .home header img
   width: 300px
@@ -7,3 +8,7 @@
 .text.item
   line-height: 24px
   padding: 0
+
+.demo-block .copy-code-button {
+  display: none
+}
