--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -14,3 +14,15 @@
 .demo-block .copy-code-button {
   display: none
 }
+
+.theme-default-content code {
+  color: #476582;
+}
+
+body:not(.theme-dark) .theme-default-content code, body.theme-light .theme-default-content code {
+  background: rgba(27, 31, 35, .05)
+}
+
+div[class*='language-'] {
+  background: #fafafa;
+}
