--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,5 +1,7 @@
 @import 'element-ui/*'
 @require './theme/index.styl';
+// 文档图标库
+@import '//at.alicdn.com/t/c/font_3584623_eu5y80bm13m.css'
 
 .home header img
   width: 300px
@@ -11,4 +13,16 @@
 
 .demo-block .copy-code-button {
   display: none
+}
+
+.theme-default-content code {
+  color: #476582;
+}
+
+body:not(.theme-dark) .theme-default-content code, body.theme-light .theme-default-content code {
+  background: rgba(27, 31, 35, .05)
+}
+
+div[class*='language-'] {
+  background: #fafafa;
 }
