:memo: docs: 开发流程文档

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -26,3 +26,7 @@ body:not(.theme-dark) .theme-default-content code, body.theme-light .theme-defau
 div[class*='language-'] {
   background: #fafafa;
 }
+
+.theme-default-content code {
+  padding: 0.1rem 0.3rem
+}
