--- a/styles/src/mixins/config.scss
+++ b/styles/src/mixins/config.scss
@@ -1,4 +1,5 @@
 $namespace: 'dl' !default;
+$el-namespace: 'el' !default;
 $common-separator: '-' !default;
 $element-separator: '__' !default;
 $modifier-separator: '--' !default;
