--- a/styles/src/var.scss
+++ b/styles/src/var.scss
@@ -53,13 +53,25 @@
 
   // --el-color-#{$type}
   // --el-color-#{$type}-light-{$i}
-  @each $type in (primary, success, warning, danger, error, info) {
+  @each $type in $types {
     @include set-css-color-type($colors, $type);
   }
 
   // color-scheme
   // Background --el-bg-color-#{$type}
   @include set-component-css-var('bg-color', $bg-color);
+  // 设置不同背景
+  @each $type in (primary, success, warning, danger, error, info) {
+    @include set-css-var-value('bg-color-#{$type}', map.get($colors, $type, 'base'));
+  }
+  // 设置文本字体颜色
+  @each $type in (primary, success, warning, danger, error, info) {
+    @include set-css-var-value('font-color-#{$type}', $color-white);
+  }
+  // 设置边框颜色
+  @each $type in (primary, success, warning, danger, error, info) {
+    @include set-css-var-value('border-color-#{$type}', map.get($colors, $type, 'base'));
+  }
   // --el-text-color-#{$type}
   @include set-component-css-var('text-color', $text-color);
   // --el-border-color-#{$type}
@@ -76,6 +88,10 @@
   // overlay & mask
   @include set-component-css-var('overlay-color', $overlay-color);
   @include set-component-css-var('mask-color', $mask-color);
+
+  // button
+  @include set-css-var-value('button-font-color-primary', $color-white);
+  @include set-css-var-value('button-bg-color-primary', $color-primary);
 
   // Border
   @include set-css-var-value('border-width', $border-width);
