:sparkles: feat(component): 新增button 组件换肤功能

--- a/styles/src/common/var.scss
+++ b/styles/src/common/var.scss
@@ -660,35 +660,7 @@ $button: map.merge(
     'divide-border-color': rgba($color-white, 0.5),
     'outline-color': getCssVar('color-primary', 'light-5'),
     'hover-link-text-color': getCssVar('color-info'),
-    // 'active-color': getCssVar('text-color', 'primary'),
-    // 重要按钮两种主题兼容
-    // 'font-color-primary': getCssVar('color-white'),
-    // 'bg-color-primary': getCssVar('color-primary'),
-    // 'hover-font-color-primary': getCssVar('color-white'),
-    // 'hover-bg-color-primary': getCssVar('color-primary', 'light-3'),
-    // 'disabled-font-color-primary': getCssVar('color-white'),
-    // 'disabled-bg-color-primary': getCssVar('color-primary', 'light-7'),
-    // 'active-font-color-primary': getCssVar('color-white'),
-    // 'active-bg-color-primary': getCssVar('color-primary'),
-    // 'hover-link-text-color-primary': getCssVar('color-info'),
-    // 重要-朴素按钮两种主题兼容
-    'font-color-primary-plain': getCssVar('color-primary'),
-    'bg-color-primary-plain': getCssVar('color-primary', 'light-7'),
-    'hover-font-color-primary-plain': getCssVar('color-primary'),
-    'hover-bg-color-primary-plain': getCssVar('color-primary', 'light-8'),
-    'disabled-font-color-primary-plain': getCssVar('color-primary'),
-    'disabled-bg-color-primary-plain': getCssVar('color-primary', 'light-8'),
-    'active-font-color-primary-plain': getCssVar('color-primary'),
-    'active-bg-color-primary-plain': getCssVar('color-primary', 'light-5'),
-    // 重要-幽灵按钮两种主题兼容
-    'font-color-primary-ghost': getCssVar('color-primary'),
-    'border-color-primary-ghost': getCssVar('color-primary'),
-    'hover-font-color-primary-ghost': getCssVar('color-primary'),
-    'hover-border-color-primary-ghost': getCssVar('color-primary'),
-    'disabled-font-color-primary-ghost': getCssVar('color-primary', 'light-7'),
-    'disabled-border-color-primary-ghost': getCssVar('color-primary', 'light-7'),
-    'active-hover-font-color-primary-ghost': getCssVar('color-primary'),
-    'active-hover-border-color-primary-ghost': getCssVar('color-primary'),
+    'active-color': getCssVar('text-color', 'primary'),
   ),
   $button
 );
