--- a/styles/src/element-ui/button.scss
+++ b/styles/src/element-ui/button.scss
@@ -35,13 +35,13 @@ $button-icon-span-gap: map.merge(
   // height: map.get($input-height, 'default');
   white-space: nowrap;
   cursor: pointer;
-  color: getCssVar('button', 'text-color');
   font-weight: getCssVar('button', 'font-weight');
-  text-align: center;
-  vertical-align: middle;
+  color: getCssVar('button', 'text-color');
   background-color: getCssVar('button', 'bg-color');
   border: getCssVar('border');
   border-color: getCssVar('button', 'border-color');
+  text-align: center;
+  vertical-align: middle;
   box-sizing: border-box;
   outline: none;
   transition: 0.1s;
@@ -51,14 +51,14 @@ $button-icon-span-gap: map.merge(
   &:hover,
   &:focus {
     color: getCssVar('button', 'hover', 'text-color');
-    // border-color: getCssVar('button', 'hover', 'border-color');
+    border-color: getCssVar('button', 'hover', 'border-color');
     background-color: getCssVar('button', 'hover', 'bg-color');
     outline: none;
   }
 
   &:active {
     color: getCssVar('button', 'active', 'text-color');
-    // border-color: getCssVar('button', 'active', 'border-color');
+    border-color: getCssVar('button', 'active', 'border-color');
     background-color: getCssVar('button', 'active', 'bg-color');
     outline: none;
   }
@@ -96,7 +96,6 @@ $button-icon-span-gap: map.merge(
   }
 
   @include when(plain) {
-    border: none;
 
     @include css-var-from-global(
       ('button', 'hover', 'text-color'),
@@ -113,7 +112,6 @@ $button-icon-span-gap: map.merge(
   }
 
   @include when(ghost) {
-    background-color: map.get($colors, 'white');
 
     @include css-var-from-global(
       ('button', 'hover', 'text-color'),
@@ -223,6 +221,7 @@ $button-icon-span-gap: map.merge(
     background: transparent;
     padding: 2px;
     height: auto;
+    text-decoration: underline;
 
     &:hover,
     &:focus {
@@ -287,7 +286,6 @@ $button-icon-span-gap: map.merge(
 
   @each $type in (primary, success, warning, danger, info) {
     @include m($type) {
-      border-color: transparent;
       @include button-variant($type);
     }
   }
