:sparkles: feat(component): 增加时间选择器

--- a/styles/src/common/var.scss
+++ b/styles/src/common/var.scss
@@ -1065,6 +1065,17 @@ $datepicker: map.merge(
   $datepicker
 );
 
+$timepicker: () !default;
+$timepicker: map.merge(
+  (
+    'width': 230px,
+    'icon-size': 16px,
+    'border-color': getCssVar('color-primary'),
+    'icon-color': getCssVar('color-primary'),
+  ),
+  $timepicker
+);
+
 $date-editor: () !default;
 $date-editor: map.merge(
   (
