:recycle: refactor(component): 修改样式、文件命名

--- a/styles/src/index.scss
+++ b/styles/src/index.scss
@@ -3,4 +3,4 @@
 
 @use 'element-ui/button.scss';
 @use 'element-ui/datePicker.scss';
-@use 'element-ui/timePicker.scss';
+@use 'element-ui/time-picker.scss';
