:lipstick: style(component): 优化样式

--- a/styles/src/element-ui/time-picker.scss
+++ b/styles/src/element-ui/time-picker.scss
@@ -30,7 +30,7 @@
   &.el-range-editor {
     width: getCssVar('date-editor', 'range-width');
   }
-  input {
+  .el-input__inner, .el-range-input {
     width: getCssVar('date-editor', 'width');
     text-align: center;
     color: getCssVar('date-editor', 'text-color');
